--- a/src/app/table-row/table-row.component.scss
+++ b/src/app/table-row/table-row.component.scss
@@ -1,4 +1,14 @@
+table {
+    width: 800px;
+}
+
 tr{
-    display: flex;
-    flex-flow: row;
+    width: 100%;
+    column-gap: 50px;
+}
+
+tr img {
+    object-fit: contain;
+    width: 100%;
+    height: 60px;
 }
