table buttons and currency format

--- a/src/app/main-table/main-table.component.scss
+++ b/src/app/main-table/main-table.component.scss
@@ -1,5 +1,4 @@
 tr{
-    display: flex;
     flex-flow: row;
 }
 
@@ -7,4 +6,13 @@ tr img {
     object-fit: contain;
     width: 100%;
     height: 60px;
+}
+
+td {
+    column-gap: 10px;
+}
+
+.buttons-cell {
+    display: flex;
+    flex-flow: column;
 }
