--- a/src/app/main-table/main-table.component.html
+++ b/src/app/main-table/main-table.component.html
@@ -12,14 +12,18 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let product of products;">
+        <tr *ngFor="let product of products; let i = index;">
             <td><img [src]="product.photo" alt="(sin foto!)"></td>
             <td><p>{{product.brand | uppercase}}</p></td>
             <td><p>{{product.model | titlecase}}</p></td>
             <td><p>{{product.year}}</p></td>
             <td><p>{{product.available_since}}</p></td>
-            <td><p>{{product.price | currency:'EUR':'es'}}</p></td>
-            <td><p>{{product.price * 0.21 | currency:'EUR':'es'}}</p></td>
+            <td><p>{{product.price | currency:'EUR':'symbol':'.2-2':'es'}}</p></td>
+            <td><p>{{product.price * 1.21 | currency:'EUR':'symbol':'.2-2':'es'}}</p></td>
+            <td class="buttons-cell">
+                <button (click)="reducePrice(i)">Rebajar</button>
+                <button (click)="deleteProduct(i)">Vendido</button>
+            </td>
         </tr>
     </tbody>
 </table>
