--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div id="main-container">
     <h1>{{title}}</h1>
+    <app-search-bar></app-search-bar>
     <app-main-table></app-main-table>
 </div>
