--- a/src/app/main-table/main-table.component.html
+++ b/src/app/main-table/main-table.component.html
@@ -1,14 +1,7 @@
 <table>
     <thead>
         <tr>
-            <th scope="col">Foto</th>
-            <th scope="col">Marca</th>
-            <th scope="col">Modelo</th>
-            <th scope="col">Año</th>
-            <th scope="col">En venta desde</th>
-            <th scope="col">Precio</th>
-            <th scope="col">PVP</th>
-            <th scope="col">Acciones</th>
+            <th scope="col" *ngFor="let header of table_headers" (click)="sort(header.toLowerCase())">{{header.replace('_',' ')}}</th>
         </tr>
     </thead>
     <tbody>
