--- a/src/app/main-table/main-table.component.scss
+++ b/src/app/main-table/main-table.component.scss
@@ -1,11 +1,14 @@
 tr{
     flex-flow: row;
-}
-
-tr img {
+    img {
     object-fit: contain;
     width: 100%;
     height: 60px;
+    }
+}
+
+th{
+    text-decoration: underline;
 }
 
 td {
