--- a/src/app/main-table/main-table.component.html
+++ b/src/app/main-table/main-table.component.html
@@ -4,7 +4,7 @@
         <h2><i>Find your car!</i></h2>
         <div class= "search-container">
             <label id="search-input-label" for="search-input" style="display: none;">Buscar</label>
-            <input id="search-input" [(ngModel)]="prueba"  type="search" placeholder="Search by Brand" name="search-input">
+            <input id="search-input" [(ngModel)]="searchValue.brand"  type="search" placeholder="Search by Brand" name="search-input">
             <div class="filtro-btn">
                 <img id="fotoflecha" src="assets/images/icons8-flecha-ampliar-32.png" alt="Search" (click)="setSearch()">
             </div>
@@ -14,50 +14,31 @@
                 <h3>Model</h3>
                 <select>
                     <option searchValue.model=""></option>
-                    <option *ngFor="let product of getProducts()" [ngModel]="searchValue.model" ngDefaultControl>{{product.model}}</option>
+                    <option *ngFor="let model of getModel()" [ngModel]="searchValue.model" ngDefaultControl>{{model}}</option>
                 </select>
             </div>
             <div class="search-select">
                 <h3>Year</h3>
                 <select>
                     <option searchValue.year=0></option>
-                    <option *ngFor="let product of getProducts()" [ngModel]="searchValue.year" ngDefaultControl>{{product.year}}</option>
+                    <option *ngFor="let year of getYears()" [ngModel]="searchValue.year" ngDefaultControl>{{year}}</option>
                 </select>
             </div>
-            <!--
-                <div class="search-span">
-                <div class="values">
-                    <span id="range1">
-                        0
-                    </span>
-                    <span> &dash; </span>
-                    <span id="range2">
-                        {{maxprice}}
-                    </span>
-                    <span>€</span>
-                </div>
-                <div class="box">
-                    <div class="rangeSlider">
-                        <input type="range" class="circleRange" min="0" max={{maxprice}} value="100">
-                    </div>
-                    <div class="value"></div>
-                </div>
-            </div>
-
-            -->
         </div>
     </div>
     <table>
         <thead>
             <tr>
                 <th scope="col" *ngFor="let header of table_headers" (click)="sort(header.toLowerCase())">
-                    <p>{{header.replace('_',' ')}}</p>
-                    <img src="../assets/images/sort-solid.svg">
+                    <div class="thcontent">
+                        <p>{{header.replace('_',' ')}}</p>
+                        <img src="../assets/images/sort-solid.svg">
+                    </div>
                 </th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let product of products | searchfilter: prueba; let i = index;">
+            <tr *ngFor="let product of products | searchfilter:searchValue.brand; let i = index;">
                 <td><img [src]="product.photo" alt="(sin foto!)"></td>
                 <td><p>{{product.brand | uppercase}}</p></td>
                 <td><p>{{product.model | titlecase}}</p></td>
