--- a/src/app/main-table/main-table.component.scss
+++ b/src/app/main-table/main-table.component.scss
@@ -23,15 +23,7 @@ td {
 
 th {
     cursor: pointer;
-    text-align: center;
-    p {
-        width: auto;
-        float: left;
-    }
-    img {
-        height: 25px;
-        width: 25px;
-    }
+    background-color: #5254553a;
 }
 
 .buttons-cell {
@@ -119,6 +111,20 @@ th {
 
 .search-select select{
     width: 200px;
+}
+
+.thcontent{
+    display: flex;
+    width:100%;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 10px;
+    margin-left: 20px;
+    img{
+        height: 15px;
+        width: 15px;
+    }
+    align-self: center;
 }
 
 
