--- a/src/app/main-table/main-table.component.html
+++ b/src/app/main-table/main-table.component.html
@@ -4,7 +4,7 @@
         <h2><i>Find your car!</i></h2>
         <div class= "search-container">
             <label id="search-input-label" for="search-input" style="display: none;">Buscar</label>
-            <input id="search-input" [(ngModel)]="searchValue.brand"  type="search" placeholder="Search by Brand" name="search-input">
+            <input id="search-input" [(ngModel)]="prueba"  type="search" placeholder="Search by Brand" name="search-input">
             <div class="filtro-btn">
                 <img id="fotoflecha" src="assets/images/icons8-flecha-ampliar-32.png" alt="Search" (click)="setSearch()">
             </div>
@@ -32,13 +32,13 @@
                 <th scope="col" *ngFor="let header of table_headers" (click)="sort(header.toLowerCase())">
                     <div class="thcontent">
                         <p>{{header.replace('_',' ')}}</p>
-                        <img src="../assets/images/sort-solid.svg">
+                        <img *ngIf="header != 'Photo'" src="../assets/images/sort-solid.svg">
                     </div>
                 </th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let product of products | searchfilter:searchValue.brand; let i = index;">
+            <tr *ngFor="let product of products | searchfilter: prueba; let i = index;">
                 <td><img [src]="product.photo" alt="(sin foto!)"></td>
                 <td><p>{{product.brand | uppercase}}</p></td>
                 <td><p>{{product.model | titlecase}}</p></td>
